<resources>
    <string name="app_name">Tambalin</string>

    <!-- Splash Screen -->
    <string name="title_splash">TAMBALIN APP</string>
    <string name="desc_splash">Splash Screen</string>
    <string name="by_splash">Náplastech Indonesia</string>


    <!-- Onboarding Screen -->
    <string name="first_title_ob">Cari</string>
    <string name="second_title_ob">Pilih</string>
    <string name="third_title_ob">Panggil</string>

    <string name="first_desc_ob">Cari tambal ban yang sesuai dengan jenis ban motormu</string>
    <string name="second_desc_ob">Pilih mitra terdekat dan bisa menerima layanan tambal</string>
    <string name="third_desc_ob">Panggil jika sudah sesuai dengan harga layanan</string>

    <string name="btn_ob">Coba Sekarang</string>
    <string name="skip_ob">Lewati</string>

    <!-- User Screen -->
    <string name="title_masuk">Masuk Akun</string>
    <string name="desc_masuk">Sudah punya akun ? masuk menggunakan Nomor Handphone</string>

    <string name="fm_hp">Nomor Handphone</string>
    <string name="fm_sandi">Kata Sandi</string>
    <string name="fm_reset">Lupa kata sandi?</string>
    <string name="fm_reset2">Reset</string>

    <string name="btn_masuk">Masuk</string>
    <string name="btn_daftar">Daftar</string>
    <string name="title_activity_handlers">Handlers</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_home_mnew">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>