<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserScreen.LoginScreen"
    android:background="@color/white">

    <ImageView
        android:layout_width="530dp"
        android:layout_height="136dp"
        android:layout_marginLeft="-60dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/footeruser" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="70dp"
        android:paddingRight="40dp"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="76dp">

        <TextView
            android:id="@+id/masukakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/title_masuk"
            android:textColor="@color/black"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/descmasuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:lineHeight="30dp"
            android:paddingTop="10dp"
            android:text="@string/desc_masuk"
            android:textColor="@color/descFont"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/lblhp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/bold"
            android:text="@string/fm_hp"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputHp"
                android:background="@drawable/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="62822202424242"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lblpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/bold"
            android:text="@string/fm_sandi"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPass"
                android:background="@drawable/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="*********"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/descreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingTop="20dp"
                android:text="@string/fm_reset"
                android:textColor="@color/descFont"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/descreset2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="10dp"
                android:text="@string/fm_reset2"
                android:textColor="@color/tosca_1"
                android:textSize="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/masuk"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/bold"
            android:textColor="@color/white"
            android:letterSpacing="0"
            android:text="@string/btn_masuk"
            android:textAllCaps="false"
            android:textSize="16dp" />

        <Button
            android:id="@+id/daftar"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_secondary"
            android:fontFamily="@font/bold"
            android:letterSpacing="0"
            android:text="@string/btn_daftar"
            android:textAllCaps="false"
            android:textColor="@color/tosca_1"
            android:textSize="16dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>